main/default/objects/Broker_License__c/Broker_License__c.object-meta.xml
<CustomObject>
    <label>Broker License</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Broker License Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>