main/default/objects/Broker_License__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Broker_Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broker Licenses</relationshipLabel>
    <relationshipName>Broker_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>