main/default/objects/Broker_License__c/fields/License_Entity__c.field-meta.xml
<CustomField>
    <fullName>License_Entity__c</fullName>
    <label>License Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>