main/default/objects/Broker_License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surplus Lines</fullName>
            </value>
            <value>
                <fullName>Limited Lines</fullName>
            </value>
            <value>
                <fullName>Admitted Lines</fullName>
            </value>
            <value>
                <fullName>Admitted</fullName>
                <isActive>false</isActive>
                <label>Admitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>