main/default/objects/Broker_License__c/fields/LicenseAddress__c.field-meta.xml
<CustomField>
    <fullName>LicenseAddress__c</fullName>
    <label>License Address</label>
    <type>Address</type>
</CustomField>