main/default/objects/Broker_License__c/fields/licenseStateNumber__c.field-meta.xml
<CustomField>
    <fullName>licenseStateNumber__c</fullName>
    <formula>TEXT(License_State__c) +&apos;&apos;+ License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>licenseStateNumber</label>
    <type>Text</type>
</CustomField>