main/default/objects/Broker_License__c/fields/NIPR_License_flag__c.field-meta.xml
<CustomField>
    <fullName>NIPR_License_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NIPR License flag</label>
    <type>Checkbox</type>
</CustomField>